# vap-examples

./: .gitignore  Dockerfile  README.md
src/simple/components/add/: add.py  add_component.py  pyproject.toml
src/simple/components/multiply/: multiply.py  multiply_component.py
src/simple/pipelines/: simple_pipeline.py
